<resources>
    <string name="app_name">Knit Picker</string>
    <string name="title_activity_lib">LibActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="stitch_label">Stitch</string>
    <string name="item_label">Item</string>
    <string name="name_label">Name</string>
    <string name="note_label"> note</string>
    <string name="form_name_label">Name: </string>
    <string name="form_name_hint">Enter name here</string>
    <string name="form_notes_label">Description/Notes:</string>
    <string name="form_notes_hint">Enter description here</string>
    <string name="done_hint">Done</string>
    <string name="email_hint">E-mail</string>
    <string name="save_text">Save</string>
    <string name="edit_text">Edit</string>
    <string name="photo_upload_text">Upload photo of finished item</string>
    <string name="photo_view_text">View photo of finished item</string>
    <string name="delete_text">Delete</string>
    <string name="create_notice_text">Pair created</string>
    <string name="save_notice_text">Pair saved</string>
    <string name="delete_notice_text">Pair deleted</string>
    <string name="login_text">Log In</string>
    <string name="password_hint">Password</string>
    <string name="view_in_lib">View</string>
    <string name="choose_text">Choose</string>
    <string name="load_failure_text">Failed to load data</string>
    <string name="upload_failure_text">Failed to upload data</string>
    <string name="photo_success_text">Successfully took photo</string>
    <string name="upload_unallowed_text">Upload allowed only for completed items</string>
    <string name="no_photo_text">No photo uploaded</string>
    <string name="no_photo_notif_done">No photo exists - take one!</string>
    <string name="no_photo_notif_undone">Only finished matches can have photos</string>
    <string name="btn_stitch_text">View stitch instructions</string>
</resources>
