<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.mstu5031_knittingapp.MatchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stitch_label"></TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/stockinette" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="stockinette"></TextView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_label"></TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hat" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="hat"></TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_name_label"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/form_name_hint"
            android:inputType="textLongMessage"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_notes_label"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/form_name_hint"
            android:inputType="textLongMessage"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/done_hint" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_save_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_text" />


</LinearLayout>
