<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.mstu5031_knittingapp.EditPairActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/pair_stitch_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/stockinette"
                android:paddingBottom="0dp"
                android:layout_marginBottom="0dp"
                />
            <TextView
                android:id="@+id/pair_stitch_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginTop="0dp"
                android:paddingTop="0dp"
                android:text="stockinette"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/pair_item_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hat" />
            <TextView
                android:id="@+id/pair_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textAlignment="center"
                android:text="hat"></TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/pair_name_entry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/form_name_hint"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/pair_notes_entry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/form_notes_hint"
            android:inputType="textLongMessage"
            />
        <CheckBox
            android:id="@+id/pair_done_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/done_hint" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_edit"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:onClick="savePairInfo"
            />
        <Button
            android:id="@+id/btn_del"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Delete"
            android:onClick="deletePairInfo"
            />

    </LinearLayout>

</LinearLayout>
